GtkLabel: Show erroneous text if parsing markup failed

https://bugzilla.gnome.org/show_bug.cgi?id=752920